--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rsamuel1993/eslint-config-node",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "Ryan Samuel",
   "description": "A Shareable ESLint Configuration for Node Packages and Services",
   "main": "eslint.config.js",
@@ -29,6 +29,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-tailwindcss": "^3.18.2",
     "globals": "^16.3.0",
     "prettier": "^3.2.5"
   }
